// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography ACT theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1f64as-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ACT_ET theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-uspa1m-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1csc89d-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;
